# go2_locomotion

./: README.md
src/leg_odometry_ros2/: CMakeLists.txt  README.md  package.xml
src/leg_odometry_ros2/config/: leg_odometry.yaml
src/leg_odometry_ros2/include/leg_odometry_ros2/: leg_kinematics.hpp  moving_window_filter.hpp
src/leg_odometry_ros2/src/: leg_kinematics.cpp  leg_odometry_node.cpp
메모장/: leg odom.md  ros2-sdk 통신.md
